proj/phase1/test/test_12011327_3.out
Error type A at Line 3: Identifier starts with digits 12nihao
Error type A at Line 4: Mysterious lexeme @
