proj/phase1/test/test_12011327_3.spl
int test_12011327_3()
{
	int 12nihao = 12;
  return @;
}
